Added gitignore file, fixed Dto file
